--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "styled-components": "^6.1.12"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5"
   }
 }
