--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["./src/*"]
+      "@components/*": ["components/*"],
+      "@utils/*": ["utils/*"]
     }
-  }
+  },
+  "include": ["src"]
 }
+
